--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -2,15 +2,15 @@
 
 // Color variables
 
-$color-primary: #854442;
+$color-primary: #98bbd3;
 $color-primary-light: lighten($color-primary, 20%);
 $color-primary-dark: darken($color-primary, 20%);
 
-$color-secondary: #be9b7b;
+$color-secondary: #fff88b;
 $color-secondary-light: lighten($color-secondary, 20%);
 $color-secondary-dark: darken($color-secondary, 20%);
 
-$color-tertiary: #4b3832;
+$color-tertiary: #f697a2;
 $color-tertiary-light: lighten($color-tertiary, 20%);
 $color-tertiary-dark: darken($color-tertiary, 20%);
 
@@ -18,7 +18,7 @@ $color-gray: #888;
 $color-gray-light: lighten($color-gray, 20%);
 $color-gray-dark: darken($color-gray, 20%);
 
-$color-success: #428566;
+$color-success: #d9ebd4;
 $color-success-light: lighten($color-success, 20%);
 $color-success-dark: darken($color-success, 20%);
 
@@ -30,6 +30,6 @@ $color-alert: #941414;
 $color-alert-light: lighten($color-alert, 20%);
 $color-alert-dark: darken($color-alert, 20%);
 
-$font-sans-serif: Roboto, sans-serif;
+$font-sans-serif: Helvetica, Roboto, sans-serif;
 $font-serif: roboto_slab, serif;
 $font-monospace: Consolas, "Liberation Mono", Courier, monospace;
