adjusted link color to primary for better contrast, updated readme

--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -9,7 +9,7 @@ body {
 }
 
 a {
-    color: $color-primary-light;
+    color: $color-primary-dark;
     &:focus,
     &:hover {
         color: $color-primary;
