--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,4 +1,15 @@
 footer { 
-    background-color: $color-primary;
     
+}    background-color: $color-primary; 
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
+
+ul {
+    list-style-type: none;
+    text-align: center;
+}
+
