--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,6 +1,5 @@
 footer { 
-    
-}    background-color: $color-primary; 
+    background-color: $color-primary; 
     width: 100%;
     display: flex;
     flex-direction: column;
