--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -54,5 +54,5 @@ h6 {
 }
 h1, h2, h3, h4, h5, h6 {
     line-height: 1.2;  // reset to new font-size
-    font-family: $font-serif;
+    font-family: $font-sans-serif;
 }
