commented out a hover because it was interferring with button design

--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -8,13 +8,13 @@ body {
     font-family: $font-sans-serif;
 }
 
-a {
-    color: $color-primary-dark;
-    &:focus,
-    &:hover {
-        color: $color-primary;
-    }
-}
+// a {
+//     color: $color-primary-dark;
+//     &:focus,
+//     &:hover {
+//         color: $color-primary;
+//     }
+// }
 
 h1 {
     font-size: 24px;
