card-module pink and yellow modifiers

--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -10,9 +10,16 @@
         }
 
 
+    &--yellow {
+        background: $color-secondary;
+        
     }
 
 
+    &--pink {
+        background: $color-tertiary;
+        
+      
     }
 
 
