More button options. Added skew-to-straight button.

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -1,6 +1,6 @@
 
 .button {
-    background:#f697a2 ;
+    background:$color-tertiary;
     color: #000;
     border: #000 solid 3px;
     width: 200px;
@@ -8,7 +8,7 @@
     text-align: center;
     &:focus,
     &:hover {
-        color: #fff;
+        color: #000;
         background: $color-tertiary-dark;
         // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -16,14 +16,35 @@
 
     &--ver2 {
       &:hover {
-        color: #000;
+        color: #fff;
     }
   }
+
+
     &--skew {
-      transform: skew(20deg);
+      transform: skew(20deg, 0deg);
     }
     &--inverseskew {
-      transform: skew(-20deg);
+      transform: skew(-20deg, 0deg);
+    }
+
+    &--hoverskew {
+      &:hover {
+        transform: skew(20deg, 0deg);
+    }
+    }
+
+    &--hoverinverseskew {
+      &:hover {
+        transform: skew(-20deg, 0deg);
+    }
+    }
+
+    &--hoverstraight {
+      &:hover {
+        transform: skew(0deg, 0deg);
+        
+    }
     }
 
     &__nocolor {
@@ -35,18 +56,33 @@
 
       }
 
+
+
       }
 
       &__nocolor--yellow {
-          background: #fff;
-          &:focus,
           &:hover {
-              color: #000;
               background: $color-secondary-dark;
 
           }
 
           }
+
+          &__nocolor--blue {
+              &:hover {
+                  background: $color-primary-dark;
+
+              }
+
+              }
+
+              &__nocolor--green {
+                  &:hover {
+                      background: $color-success-dark;
+
+                  }
+
+                  }
 
 
     &.success {
