--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -7,9 +7,11 @@ body {
     padding: 30px;
     font-family: $font-sans-serif;
 }
-
-section, main {
-	display: flex;
+@media only screen and (min-width: 769px) {
+	section, main {
+		display: flex;
+		flex-wrap:wrap;
+	}
 }
 
 a {
