--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -15,6 +15,20 @@ ul {
 
 .footer .a .hover {
     color: black;
+a {
+    color: $color-gray-dark;
+    &:focus,
+    &:hover {
+        color: $color-gray-light;
+    }
+}
+
+.social {
+    display: flex;
+    align-items: center;
+}
+
+form {
 
 }
 
