--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,5 +1,5 @@
-footer {
-    background-color: $color-primary;
+footer { 
+    background-color: $color-primary; 
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -14,6 +14,13 @@ ul {
     margin-left: 0;
 }
 
+a {
+    color: $color-gray-dark;
+    &:focus,
+    &:hover {
+        color: $color-gray-light;
+    }
+}
 
 .social {
     display: flex;
@@ -23,3 +30,4 @@ ul {
 form {
 
 }
+
