--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -17,6 +17,7 @@ $color-tertiary-dark: darken($color-tertiary, 20%);
 $color-gray: #888;
 $color-gray-light: lighten($color-gray, 20%);
 $color-gray-dark: darken($color-gray, 20%);
+$color-dark: darken($color-gray, 40%);
 
 $color-success: #d9ebd4;
 $color-success-light: lighten($color-success, 20%);
