--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -13,13 +13,13 @@ body {
 	}
 }
 
-a {
-    color: $color-primary-dark;
-    &:focus,
-    &:hover {
-        color: $color-primary;
-    }
-}
+// a {
+//     color: $color-primary-dark;
+//     &:focus,
+//     &:hover {
+//         color: $color-primary;
+//     }
+// }
 
 h1 {
     font-size: 24px;
