--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -5,6 +5,7 @@
     flex: 1 300px;
 
 	& img {
+		background: $color-soft-white;
 	    display: flex;
 	    justify-content: center;
 	    max-width: 300px;
