--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -18,6 +18,9 @@ $color-gray: #888;
 $color-gray-light: lighten($color-gray, 20%);
 $color-gray-dark: darken($color-gray, 20%);
 
+$color-white: #fff;
+$color-soft-white: #f2f2f2;
+
 $color-success: #d9ebd4;
 $color-success-light: lighten($color-success, 20%);
 $color-success-dark: darken($color-success, 20%);
