changed image size to be responsive auto resizes, but scaling? #14

--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -2,15 +2,13 @@
 	box-sizing: border-box;
     padding: 2em;
     margin: 1em;
-    flex: 1 300px;
+    flex: 1 1 300px;
 
 	& img {
 		background: $color-soft-white;
 	    display: flex;
 	    justify-content: center;
-	    max-width: 300px;
-	    max-height: 300px;
-	    margin: 2em;
+		width: 100%;
 	}
 
     &--yellow {
