removed uppercase transform to header

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -41,7 +41,7 @@
   color           : $color-dark;
   text-decoration : none;
   text-decoration : none;
-  text-transform  : uppercase;
+  // text-transform  : uppercase;
   font-weight     : 700;
   letter-spacing  : 0.15em;
   transition      : .5s color;
