--- a/src/scss/modules/mobile-nav.scss
+++ b/src/scss/modules/mobile-nav.scss
@@ -1,36 +1,48 @@
+
+h1 {
+  display: none;
+}
+
 .nav__mobile {
   display: flex;
   flex-direction: column;
   height: 100vh;
 
 
-&--home {
-  background:$color-primary;
-  height: 30vh;
-  width: 150%;
-  margin-left: -71px;
-  transform:skew(79deg, -17deg);
-  transform:rotate(35deg);
+&--logoandham {
+  display: flex;
+  align-items: center;
 }
 
-&--portfolio {
-  background:$color-tertiary;
-  height: 30vh;
-  width: 150%;
-  margin-left: -71px;
-  transform:skew(79deg, -17deg);
-  transform:rotate(35deg);
+&--logo img {
+  max-width: 80%;
 }
 
-&--guestbook {
-background: $color-secondary;
-height: 30vh;
-width: 150%;
-margin-left: -71px;
-transform:skew(79deg, -17deg);
-transform:rotate(35deg);
-
+&--hamburger {
+color: #000;
+padding-right: 50px;
 }
+
+&--dropdownlist {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border: 3px solid black;
+  width: 100%;
+  height: 20%;
+}
+
+// &--shape {
+//   background:$color-primary;
+//   height: 30vh;
+//   width: 150%;
+//   margin-left: -71px;
+//   transform:skew(79deg, -17deg);
+//   transform:rotate(35deg);
+// }
+
+
 
 
 }
