--- a/src/scss/sections/content-block.scss
+++ b/src/scss/sections/content-block.scss
@@ -2,9 +2,15 @@
 	margin: 2em auto;
 	width: 90vw;
 	&--narrow {
-		max-width: 40em;
+		max-width: 60em;
 	}
 	&--wide {
-		max-width: 70em;
+		max-width: 80em;
+	}
+	&--split {
+		display: flex;
+	}
+	&--split > * {
+		flex: 1 1;
 	}
 }
