--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -1,5 +1,5 @@
-footer { 
-    background-color: $color-primary; 
+footer {
+    background-color: $color-primary;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -14,12 +14,8 @@ ul {
     margin-left: 0;
 }
 
-a {
-    color: $color-gray-dark;
-    &:focus,
-    &:hover {
-        color: $color-gray-light;
-    }
+a.fab, a.fas {
+	padding: 0 3em;
 }
 
 .social {
@@ -29,11 +25,9 @@ a {
 
 form {
     display: flex;
-   
+
 }
 
 .button {
     margin-left: 20px;
 }
-
-
