--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -6,10 +6,12 @@
 .nav-desktop {
   display: block;
   position   : sticky;
+  background: $color-light;
   box-shadow : 5px 5px 5px #ccc;
   text-align : center;
   font-size  : calc(1em + 1vw);
-  transition : .4s all;
+  transition : .5s all;
+  padding: .5em 0 0.05em 0;
 
   // &__list {
   //   width     : 95vw;
