added light background color variable

--- a/src/scss/theme/_variables.scss
+++ b/src/scss/theme/_variables.scss
@@ -31,6 +31,8 @@ $color-alert: #941414;
 $color-alert-light: lighten($color-alert, 20%);
 $color-alert-dark: darken($color-alert, 20%);
 
+
+$color-light: #eee;
 $font-sans-serif: Helvetica, Roboto, sans-serif;
 $font-serif: roboto_slab, serif;
 $font-monospace: Consolas, "Liberation Mono", Courier, monospace;
