--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -3,7 +3,7 @@ footer {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 3em;
 }
@@ -12,6 +12,19 @@ ul {
     list-style-type: none;
     text-align: center;
     margin-left: 0;
+}
+
+.footer-nav{
+  display: flex;
+  flex-direction: row;
+}
+
+.footer-nav__item{
+  padding: 0 20px 0 20px;
+}
+
+a{
+  text-decoration: none;
 }
 
 a.fab, a.fas {
