--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -25,3 +25,20 @@
     }
 
 }
+
+p {
+    display: flex;
+    justify-content: center;
+    margin: 1em;
+}
+
+
+h1 {
+    display: flex;
+    justify-content: center;
+}
+
+.cards-button {
+    display: flex;
+    justify-content: center;
+}
