removed foundation util import

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -1,5 +1,5 @@
 /* ---- Foundation SASS files ----- */
-@import '~foundation-sites/scss/util/util';
+// @import '~foundation-sites/scss/util/util';
 ////@import '~foundation-sites/scss/settings/settings';
 //@import '~foundation-sites/scss/foundation';
 //// @import '~foundation-sites/scss/motioncd -ui';
