mainly card layout coded. .portfolio__container is the overall body container, .wrapper encompasses all of the cards, and .wrapper--alignleft and .wrapper-alignright are used to alternate the cards down the page

--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -3,6 +3,7 @@
     padding: 2em;
     margin: 1em;
     flex: 1 1 300px;
+		max-width: 400px;
 
 	& img {
 	    display: flex;
@@ -25,11 +26,7 @@
 
 }
 
-p {
-    display: flex;
-    justify-content: center;
-    margin: 1em;
-}
+
 
 
 h1 {
