Portfolio card styling
More styling of the portfolio card layout

--- a/src/scss/modules/cards.scss
+++ b/src/scss/modules/cards.scss
@@ -1,7 +1,7 @@
 .card {
 	box-sizing: border-box;
-    padding: 2em;
-    margin: 1em;
+    // padding: 2em;
+    // margin: 1em;
     flex: 1 1 300px;
 		max-width: 400px;
 
