--- a/src/scss/modules/portfolio-cards.scss
+++ b/src/scss/modules/portfolio-cards.scss
@@ -12,24 +12,47 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
 }
 
 .wrapper--alignleft {
 flex: 1;
 width: 80%;
+border: green solid 3px;
 }
 .wrapper--alignright {
 display: flex;
 flex: 1;
-justify-content: flex-end;
 width: 80%;
+justify-content: flex-end;
+border: red solid 3px;
+flex-wrap: wrap-reverse;
+
 
 }
 
+.portfolio-content__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 700px;
+  border: pink solid 3px;
+}
 
-
+.social-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 300px;
+  border: red solid 3px;
+}
 .student-name {
     margin: 1em;
     font-weight: bold;
-    font-size: 2em;
+}
+
+.portfolio-content {
+  display: flex;
+  justify-content: space-around;
 }
