--- a/src/scss/modules/portfolio-cards.scss
+++ b/src/scss/modules/portfolio-cards.scss
@@ -18,15 +18,16 @@
 .wrapper--alignleft {
 flex: 1;
 width: 80%;
-border: green solid 3px;
+
 }
 .wrapper--alignright {
 display: flex;
 flex: 1;
 width: 80%;
 justify-content: flex-end;
-border: red solid 3px;
+align-content: center;
 flex-wrap: wrap-reverse;
+height: 100%;
 
 
 }
@@ -34,18 +35,23 @@ flex-wrap: wrap-reverse;
 .portfolio-content__wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
   max-width: 700px;
+  padding: 10px;
   border: pink solid 3px;
+
 }
 
 .social-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   width: 300px;
-  border: red solid 3px;
+}
+
+.social-wrapper span {
+  margin-right: 5px;
 }
 .student-name {
     margin: 1em;
@@ -54,5 +60,16 @@ flex-wrap: wrap-reverse;
 
 .portfolio-content {
   display: flex;
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: space-around;
+
+}
+
+.portfolio-content li {
+  display: flex;
+  max-width: 200px;
+  max-height: 200px;
+  object-fit: cover;
+  align-content: space-around;
 }
