--- a/src/scss/layout/footer.scss
+++ b/src/scss/layout/footer.scss
@@ -36,11 +36,14 @@ ul {
   display: flex;
   flex-direction: row;
   text-align: center;
+  justify-content: space-around;
 }
 
 .footer-nav__item{
-  padding: 0 20px 0 20px;
+  padding: 0 1.5em;
+  font-size: large;
   margin: auto;
+  justify-content: space-around;
 }
 
 a{
@@ -60,6 +63,10 @@ a.fab {
 form {
     display: flex;
 
+}
+
+.email{
+  text-align: center;
 }
 
 .button {
