--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -11,6 +11,15 @@ body {
 	}
 }
 
+a {
+    color: $color-gray-dark;
+	text-decoration: underline;
+    &:focus,
+    &:hover {
+
+    }
+}
+
 
 h1 {
     font-size: 24px;
