--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,12 +1,12 @@
 
 /* Mobile nav logo and hamburger icon styling */
-.nav__mobile {
+.nav-mobile {
   display: flex;
   flex-direction: column;
   height: 100vh;
 
 
-	&--logoandham {
+	&--bar {
 	  display: flex;
 	  align-items: center;
 	}
@@ -41,12 +41,7 @@
 	    list-style : none;
 	  }
 
-	  &__link {
-	    color           : $color-dark;
-	    text-decoration : none;
-	    font-weight     : 700;
-	    transition      : .5s color;
-	  }
+
 	}
 
 	.nav-link {
