--- a/src/scss/pages/splash.scss
+++ b/src/scss/pages/splash.scss
@@ -1,5 +1,19 @@
+.bg-stripes {
+    background-image: url("src/img/branding/stripes.svg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    
+    
+     
+    }
+
 .card {
     border: none;
+    background: none;
 
-    
-}
+    }
+
+.button {
+    margin: 1.3rem;
+    }
