uncommented out style inside html

--- a/src/scss/pages/splash.scss
+++ b/src/scss/pages/splash.scss
@@ -1,5 +1,5 @@
 .bg-stripes {
-    background: url('./../src/img/branding/stripes.svg');
+    background: url('dist/img/branding/stripes.svg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
