added font-size variables

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,3 +1,8 @@
+$h1: calc(3vw + 1em);
+$h2: calc(2vw + 1em);
+$h3: calc(1.5vw + 1em);
+$h4: calc(1vw + 1em);
+$h5: calc(.5vw + 1em);
 
 /* Mobile nav logo and hamburger icon styling */
 .nav-mobile {
