reduced and added limits to the logo size

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -16,8 +16,12 @@ $h5: calc(.5vw + 1em);
 	  align-items: center;
 	}
 
-	&--logo img {
-	  max-width: 80%;
+
+
+	&__logo img {
+		width: 100%;
+		height: auto;
+		max-height: 100px;
 	}
 
 	&--hamburger {
