--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -1,19 +1,36 @@
-$h1: calc(3vw + 1em);
+$h1: calc(3vw + 2em);
 $h2: calc(2vw + 1em);
 $h3: calc(1.5vw + 1em);
 $h4: calc(1vw + 1em);
 $h5: calc(.5vw + 1em);
 
 /* Mobile nav logo and hamburger icon styling */
+
 .nav-mobile {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+	display: flex;
+	flex-direction: column;
+	box-shadow : 5px 5px 5px #ccc;
+	transition : .5s all;
+	text-align : center;
+	font-size  : $h4;
+	font-weight: 700;
 
+	&__navbar {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
 
-	&--bar {
-	  display: flex;
-	  align-items: center;
+	&:after {
+		content    : "";
+		display    : block;
+		position   : absolute;
+		bottom     : 0;
+		left       : 0;
+		width      : 0;
+		height     : .25em;
+		background : none repeat scroll 0 0 transparent;
+		transition : width 0.3s ease 0s;
 	}
 
 
@@ -24,87 +41,49 @@ $h5: calc(.5vw + 1em);
 		max-height: 100px;
 	}
 
-	&--hamburger {
-	color: #000;
-	padding-right: 50px;
-	}
 
+	&--hamburger {
+		color: #000;
+		padding: 0 1em;
+	}
 }
 
+.nav-desktop {
+	&__list {
+		display: none;
+	}
+}
 /* Hide mobile nav menu */
 #mobileMenu {
 	display: none;
 }
 
 /* Main nav styling and animation  */
-	.nav-desktop {
-	  background: $color-light;
-	  box-shadow : 5px 5px 5px #ccc;
-	  // text-align : center;
-	  font-size  : calc(1em + 1vw);
-	  transition : .5s all;
-	  padding: .5em 0 .05em 0;
-	&--bg-stripes {
-		    background-image: img-url('/branding/stripes.svg');
-			// url(./../img/branding/stripes.svg);
-		    background-size: 20vw;
-		    background-repeat: no-repeat;
-		    background-position: left center;
 
-		}
+.nav-link {
+	font-size: $h1;
+	color           : $color-dark;
+	text-decoration : none;
+	transition      : .5s color;
 
-	  &__item {
-	    list-style : none;
-		display: inline;
-	  }
-
-
+	&:hover {
+		color : $color-dark;
 	}
 
-	.nav-link {
-	  padding         : 0 1em;
+}
 
-	  color           : $color-dark;
-	  text-decoration : none;
-	  // text-transform  : uppercase;
-	  font-weight     : 700;
-	  letter-spacing  : 0.15em;
-	  transition      : .5s color;
-
-	  &:hover {
-	    color : $color-dark;
-	  }
-
-
-	  &:after {
-	    content    : "";
-	    display    : block;
-	    position   : absolute;
-	    bottom     : 0;
-	    left       : 0;
-	    width      : 0;
-	    height     : .25em;
-	    background : none repeat scroll 0 0 transparent;
-	    transition : width 0.3s ease 0s;
-	  }
-
-	  &--primary:after {
-	    background : $color-primary;
-	  }
-
-	  &--secondary:after {
-	    background : $color-secondary;
-	  }
-
-	  &--tertiary:after {
-	    background : $color-tertiary;
-	  }
-
-	  &:hover:after, &:active:after {
-	    left  : 0;
-	    width : 100%;
-	  }
-	}
+#mobileLogo {
+	flex: 1;
+}
+.mobile-menu{
+	display: flex;
+	height: calc(100vh - 100px);
+	width: 100%;
+	position: fixed;
+	flex-direction: column;
+	justify-content: space-around;
+	background-color: #fff;
+}
 
 
 @media only screen and (min-width: 769px) {
@@ -113,38 +92,90 @@ $h5: calc(.5vw + 1em);
 		display: none;
 	}
 
-/* .nav-desktop nav is parent container to ul */
-	.nav-desktop nav{
-		display: flex;
-		flex-wrap: nowrap;
-		flex-direction: row;
-		justify-content: space-around;
-		align-items: center;
+	.nav-desktop {
+		display: block;
+		box-shadow : 5px 5px 5px #ccc;
+		// text-align : center;
+		font-size  : $h3;
+		transition : .5s all;
 
-		/* Logo */
-		#mobileLogo {
-			flex: 1;
-		}
-		/* ul */
-		#mobileMenu {
-			display: flex;
-			padding-top: 30px;
-			flex: 2;
 
-		}
-/* Nav items (portfolio, guestbook, contact) */
 		&__item {
-	    display: inline;
-	  }
+			list-style : none;
+			display: inline;
+			padding: 0 1em;
+		}
+
+		&__link {
+			color           : $color-dark;
+			text-decoration : none;
+			font-weight     : 700;
+			transition      : .5s color;
+		}
+		&__list {
+			display: flex;
+		}
 	}
 
-.nav-link {
-  display: inline-block;
-  position: relative;
+	/* .nav-desktop nav is parent container to ul */
+	// 	.nav-desktop nav{
+	// 		display: flex;
+	// 		flex-wrap: nowrap;
+	// 		flex-direction: row;
+	// 		justify-content: space-around;
+	// 		align-items: center;
+	// 		padding: .5em 0 0.05em 0;
+	// }
+	/* Logo */
 
-  &:hover {
-    color: $color-dark;
-  }
-}
 
+	.nav-link {
+		position: relative;
+		display: inline-block;
+		font-size: $h5;
+		font-weight: 700;
+		padding: 0 1em;
+		color           : $color-dark;
+		text-decoration : none;
+		transition      : .5s color;
+
+		// &:hover {
+		// color : $color-dark;
+		//  }
+
+
+		&:after {
+			background: none repeat scroll 0 0 transparent;
+			bottom: 0;
+			content: "";
+			display: block;
+			height: .25em;
+			width: 0;
+			left: 0;
+			position: absolute;
+			background: #fff;
+			transition: width 0.3s ease 0s, left 0.3s ease 0s;
+		}
+
+		&--primary:after {
+			background : $color-primary;
+		}
+
+		&--secondary:after {
+			background : $color-secondary;
+		}
+
+		&--tertiary:after {
+			background : $color-tertiary;
+		}
+
+		&:hover:after, &:active:after {
+			left  : 0;
+			width : 100%;
+		}
+		// 	}
+		// }
+		/* Nav items (portfolio, guestbook, contact) */
+
+	}
 }
