--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -21,20 +21,6 @@ $h5: calc(.5vw + 1em);
 		align-items: center;
 	}
 
-	&:after {
-		content    : "";
-		display    : block;
-		position   : absolute;
-		bottom     : 0;
-		left       : 0;
-		width      : 0;
-		height     : .25em;
-		background : none repeat scroll 0 0 transparent;
-		transition : width 0.3s ease 0s;
-	}
-
-
-
 	&__logo img {
 		width: 100%;
 		height: auto;
@@ -42,10 +28,13 @@ $h5: calc(.5vw + 1em);
 	}
 
 
-	&--hamburger {
+	&__hamburger {
 		color: #000;
 		padding: 0 1em;
 	}
+
+
+
 }
 
 .nav-desktop {
@@ -66,15 +55,10 @@ $h5: calc(.5vw + 1em);
 	text-decoration : none;
 	transition      : .5s color;
 
-	&:hover {
-		color : $color-dark;
-	}
-
 }
 
-#mobileLogo {
-	flex: 1;
-}
+
+
 .mobile-menu{
 	display: flex;
 	height: calc(100vh - 100px);
@@ -93,40 +77,21 @@ $h5: calc(.5vw + 1em);
 	}
 
 	.nav-desktop {
-		display: block;
-		box-shadow : 5px 5px 5px #ccc;
-		// text-align : center;
+		text-align : center;
 		font-size  : $h3;
-		transition : .5s all;
 
+		// &__item {
+		// 	list-style : none;
+		// 	// display: inline;
+		// 	padding: 0 1em;
+		// }
 
-		&__item {
-			list-style : none;
-			display: inline;
-			padding: 0 1em;
-		}
-
-		&__link {
-			color           : $color-dark;
-			text-decoration : none;
-			font-weight     : 700;
-			transition      : .5s color;
-		}
 		&__list {
 			display: flex;
+			justify-content: space-around;
 		}
 	}
 
-	/* .nav-desktop nav is parent container to ul */
-	// 	.nav-desktop nav{
-	// 		display: flex;
-	// 		flex-wrap: nowrap;
-	// 		flex-direction: row;
-	// 		justify-content: space-around;
-	// 		align-items: center;
-	// 		padding: .5em 0 0.05em 0;
-	// }
-	/* Logo */
 
 
 	.nav-link {
