removed vertical margin on content block

--- a/src/scss/theme/global.scss
+++ b/src/scss/theme/global.scss
@@ -6,8 +6,8 @@ body {
 }
 @media only screen and (min-width: 769px) {
 	section, main {
-		display: flex;
-		flex-wrap:wrap;
+		// display: flex;
+		// flex-wrap:wrap;
 	}
 }
 
