--- a/src/scss/pages/splash.scss
+++ b/src/scss/pages/splash.scss
@@ -1,22 +1,20 @@
 .bg-stripes {
+	overflow-y: hidden;
     background: img('branding/stripes.svg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    
+	& .hero-image__desktop {
+		display: block;
+		position: fixed;
+		bottom: 0;
+		z-index: -1;
+}
 
-    & .card {
-        border: none;
-        background: none;
-    
-        }
-    
+
     & .cards-button {
         margin: 2rem;
         }
-    
 
-    & h3 {
-        text-align: center;
-    }
+
     }
